@@ -1,29 +1,20 @@
 #!/usr/bin/python3
 
-from debian.copyright import Copyright
-import sys
 
-header = None
-files = {}
-
-with open('debian/copyright', 'r') as f:
-    content = f.read()
-
-copyright = Copyright(content)
-if copyright.dump() != content:
-    sys.exit(2)
-
-files_i = 0
-for i, paragraph in enumerate(copyright._Copyright__paragraphs):
-    if "Files" in paragraph:
-        if paragraph["Files"] == "*" and files_i > 0:
-            copyright._Copyright__paragraphs.insert(
-                0, copyright._Copyright__paragraphs.pop(i))
-        files_i += 1
+from lintian_brush.copyright import update_copyright
 
 
-with open('debian/copyright', 'w') as f:
-    copyright.dump(f)
+def swap_files_glob(copyright):
+    files_i = 0
+    for i, paragraph in enumerate(copyright._Copyright__paragraphs):
+        if "Files" in paragraph:
+            if paragraph["Files"] == "*" and files_i > 0:
+                copyright._Copyright__paragraphs.insert(
+                    0, copyright._Copyright__paragraphs.pop(i))
+            files_i += 1
+
+
+update_copyright(swap_files_glob)
 
 print('Make "Files: *" paragraph the first in the copyright file.')
 print('Fixed-Lintian-Tags: '
