@@ -1,0 +1,2 @@
+Update copyright file header to use current field names (Name => Upstream-Name, Contact => Upstream-Contact)
+Fixed-Lintian-Tags: obsolete-field-in-dep5-copyright
