@@ -1,0 +1,7 @@
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: lintian-brush
+Upstream-Contact: Jelmer <jelmer@samba.org>
+
+Files: *
+License: GPL
+Copyright: 2012...
