@@ -30,6 +30,7 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
   * Avoid creating commit for already minimal key. Closes: #922541
   * Add fixer for global-files-wildcard-not-first-paragraph-in-dep5-
     copyright.
+  * Add fixer for obsolete-field-in-dep5-copyright.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
